<?xml version="1.0" encoding="utf-8"?> 
<LinearLayout
    android:id="@+id/statistic_activity_page"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatisticActivity"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        
        <LinearLayout
            android:id="@+id/general_statistic"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@drawable/statistic_background"
            android:elevation="10dp"
            android:clickable="true"
            android:gravity="center"
            android:layout_margin="10dp">
            
            <ImageView
                android:id="@+id/general_statistic_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:src="@drawable/new_statistics"/>
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/general_statistic"/>
            
        </LinearLayout>

        <LinearLayout
            android:id="@+id/statistic_total_expense"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@drawable/statistic_background"
            android:elevation="10dp"
            android:clickable="true"
            android:gravity="center"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/statistic_total_expense_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:src="@drawable/expenditure"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/statistic_total_expense_text"/>

        </LinearLayout>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/statistic_total_income"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@drawable/statistic_background"
            android:elevation="10dp"
            android:clickable="true"
            android:gravity="center"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/statistic_total_income_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:src="@drawable/income"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/statistic_total_income_text"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/statistic_category_expense"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@drawable/statistic_background"
            android:elevation="10dp"
            android:clickable="true"
            android:gravity="center"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/statistic_category_expense_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:src="@drawable/pie_chart"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/statistic_category_expense_text"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/statistic_category_income"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@drawable/statistic_background"
            android:elevation="10dp"
            android:clickable="true"
            android:gravity="center"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/statistic_category_income_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:src="@drawable/pie_chart"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/statistic_category_income_text"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/statistic_more"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@drawable/statistic_background"
            android:elevation="10dp"
            android:clickable="true"
            android:gravity="center"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/statistic_more_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/baseline_more_horiz_24"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/more"/>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>